--- a/01-intro/Untitled.ipynb
+++ b/01-intro/Untitled.ipynb
@@ -1170,19 +1170,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "id": "45e0149a-f00e-4ef2-8f7e-cc297ed25008",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 2) (3707048219.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[107]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdf_val['PU_DO'] = df_val['PULocationID'] + '_' + df_val['DOLocationID']\"\u001b[39m\n                                                                           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_train['PU_DO'] = df_train['PULocationID'] + '_' + df_train['DOLocationID']\n",
     "df_val['PU_DO'] = df_val['PULocationID'] + '_' + df_val['DOLocationID']"
@@ -1190,29 +1181,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "4b2d2ac7-ecb9-40bb-b02a-4f6702aa6f00",
+   "execution_count": 112,
+   "id": "3e8e7948-7c58-474a-b975-9d23d9eb3466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical = ['PU_DO'] #'PULocationID', 'DOLocationID']\n",
+    "numerical = ['trip_distance']\n",
+    "\n",
+    "dv = DictVectorizer()\n",
+    "\n",
+    "train_dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
+    "X_train = dv.fit_transform(train_dicts)\n",
+    "\n",
+    "val_dicts = df_val[categorical + numerical].to_dict(orient='records')\n",
+    "X_val = dv.transform(val_dicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "5b78ba50-bbb2-4e1c-b340-1238f32e4a14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = 'duration'\n",
+    "y_train = df_train[target].values\n",
+    "y_val = df_val[target].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "3c0b0637-ec7f-4f7a-a769-410f6b94ba0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'43'"
+       "7.758715209663881"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train.PULocationID.iloc[0]"
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = lr.predict(X_val)\n",
+    "\n",
+    "root_mean_squared_error(y_val, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "2198e335-1746-4075-bd9d-4de35b14624a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('models/lin_reg.bin', 'wb') as f_out:\n",
+    "    pickle.dump((dv, lr), f_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "60904e19-2661-452e-ad82-5d1c51e4c73c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "ea2ed00f-dda0-42b9-8085-730fcf11e949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add --all\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "0d775cc8-bfb4-4984-82b0-7cd7b9e375c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main bc4f192] Finished Setting Up and Training and Storing a Model\n",
+      " 4 files changed, 1242 insertions(+)\n",
+      " create mode 100644 01-intro/Untitled.ipynb\n",
+      " create mode 100644 01-intro/data/green_tripdata_2021-01.parquet\n",
+      " create mode 100644 01-intro/data/green_tripdata_2021-02.parquet\n",
+      " create mode 100644 01-intro/models/lin_reg.bin\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Finished Setting Up and Training and Storing a Model\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "bc37844c-8f9f-4578-bca1-03533ff0599d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 10, done.\n",
+      "Counting objects: 100% (10/10), done.\n",
+      "Delta compression using up to 2 threads\n",
+      "Compressing objects: 100% (8/8), done.\n",
+      "Writing objects: 100% (9/9), 2.56 MiB | 2.14 MiB/s, done.\n",
+      "Total 9 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\n",
+      "To https://github.com/FakeandrewA/Mlops\n",
+      "   b21754f..bc4f192  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push origin main\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e8e7948-7c58-474a-b975-9d23d9eb3466",
+   "id": "6e917e22-f03c-404c-8ed2-dd03d1342fec",
    "metadata": {},
    "outputs": [],
    "source": []
