added model registry notes

--- a/02-experiment-tracking/model-registry.ipynb
+++ b/02-experiment-tracking/model-registry.ipynb
@@ -9,12 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from mlflow.tracking import MlflowClient\n",
-    "\n",
     "\n",
     "MLFLOW_TRACKING_URI = \"sqlite:///mlflow.db\""
    ]
@@ -34,26 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Experiment: artifact_location='./mlruns/0', experiment_id='0', lifecycle_stage='active', name='Default', tags={}>,\n",
-       " <Experiment: artifact_location='./mlruns/1', experiment_id='1', lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>,\n",
-       " <Experiment: artifact_location='./mlruns/3', experiment_id='3', lifecycle_stage='active', name='my-cool-experiment', tags={}>]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "client = MlflowClient(tracking_uri=MLFLOW_TRACKING_URI)\n",
     "\n",
-    "client.list_experiments()"
+    "#client."
    ]
   },
   {
@@ -64,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "'3'"
+       "'7'"
       ]
      },
      "execution_count": 11,
@@ -85,48 +71,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from mlflow.entities import ViewType\n",
     "\n",
     "runs = client.search_runs(\n",
-    "    experiment_ids='1',\n",
-    "    filter_string=\"metrics.rmse < 7\",\n",
+    "    experiment_ids='6',\n",
+    "    filter_string=\"metrics.accuracy > 0.7\",\n",
     "    run_view_type=ViewType.ACTIVE_ONLY,\n",
     "    max_results=5,\n",
-    "    order_by=[\"metrics.rmse ASC\"]\n",
+    "    order_by=[\"metrics.accuracy ASC\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run id: 7db08e4f93af4ee1bcbce1d8a763e23a, rmse: 6.3040\n",
-      "run id: a06a6b594fff409cb0d34e203b49f33f, rmse: 6.7423\n",
-      "run id: b8904012c84343b5bf8ee72aa8f0f402, rmse: 6.9047\n",
-      "run id: 54493fed643c4952be5232279e309053, rmse: 6.9213\n"
+      "run id: 9ae9e827dc7844a082a60551fba7d3b9, rmse: 0.9469\n",
+      "run id: 80db568af11b4f9aafb461a150608565, rmse: 0.9916\n",
+      "run id: 0cb2d1d3120d40ed99a56187f14351cb, rmse: 0.9919\n"
      ]
     }
    ],
    "source": [
     "for run in runs:\n",
-    "    print(f\"run id: {run.info.run_id}, rmse: {run.data.metrics['rmse']:.4f}\")"
+    "    print(f\"run id: {run.info.run_id}, rmse: {run.data.metrics['accuracy']:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -143,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,59 +132,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Registered model 'nyc-taxi-regressor' already exists. Creating a new version of this model...\n",
-      "2022/05/19 16:47:17 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: nyc-taxi-regressor, version 4\n",
-      "Created version '4' of model 'nyc-taxi-regressor'.\n"
+      "Registered model 'from_vscode_mnist' already exists. Creating a new version of this model...\n",
+      "2025/07/14 16:31:21 WARNING mlflow.tracking._model_registry.fluent: Run with id 80db568af11b4f9aafb461a150608565 has no artifacts at artifact path 'model', registering model based on models:/m-13b91b67c0fd476f865617e8b32c091a instead\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created version '3' of model 'from_vscode_mnist'.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ModelVersion: creation_timestamp=1652971637398, current_stage='None', description=None, last_updated_timestamp=1652971637398, name='nyc-taxi-regressor', run_id='b8904012c84343b5bf8ee72aa8f0f402', run_link=None, source='./mlruns/1/b8904012c84343b5bf8ee72aa8f0f402/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=4>"
+       "<ModelVersion: aliases=[], creation_timestamp=1752490881412, current_stage='None', deployment_job_state=None, description=None, last_updated_timestamp=1752490881412, metrics=None, model_id=None, name='from_vscode_mnist', params=None, run_id='80db568af11b4f9aafb461a150608565', run_link=None, source='models:/m-13b91b67c0fd476f865617e8b32c091a', status='READY', status_message=None, tags={}, user_id=None, version=3>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "run_id = \"b8904012c84343b5bf8ee72aa8f0f402\"\n",
+    "run_id = \"80db568af11b4f9aafb461a150608565\"\n",
     "model_uri = f\"runs:/{run_id}/model\"\n",
-    "mlflow.register_model(model_uri=model_uri, name=\"nyc-taxi-regressor\")"
+    "mlflow.register_model(model_uri=model_uri, name=\"from_vscode_mnist\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "version: 1, stage: Staging\n",
-      "version: 2, stage: Production\n",
-      "version: 4, stage: None\n"
+      "version: 2, stage: Staging\n",
+      "version: 3, stage: None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_37660\\1281974936.py:2: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  latest_versions = client.get_latest_versions(name=model_name)\n"
      ]
     }
    ],
    "source": [
-    "model_name = \"nyc-taxi-regressor\"\n",
+    "model_name = \"from_vscode_mnist\"\n",
     "latest_versions = client.get_latest_versions(name=model_name)\n",
     "\n",
     "for version in latest_versions:\n",
@@ -215,22 +199,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_37660\\1600074043.py:3: FutureWarning: ``mlflow.tracking.client.MlflowClient.transition_model_version_stage`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  client.transition_model_version_stage(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<ModelVersion: creation_timestamp=1652971637398, current_stage='Staging', description='The model version 4 was transitioned to Staging on 2022-05-19', last_updated_timestamp=1652972141519, name='nyc-taxi-regressor', run_id='b8904012c84343b5bf8ee72aa8f0f402', run_link=None, source='./mlruns/1/b8904012c84343b5bf8ee72aa8f0f402/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=4>"
+       "<ModelVersion: aliases=[], creation_timestamp=1752490631101, current_stage='Staging', deployment_job_state=None, description=None, last_updated_timestamp=1752490911553, metrics=None, model_id=None, name='from_vscode_mnist', params=None, run_id='80db568af11b4f9aafb461a150608565', run_link=None, source='models:/m-13b91b67c0fd476f865617e8b32c091a', status='READY', status_message=None, tags={}, user_id=None, version=1>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_version = 4\n",
+    "model_version = 1\n",
     "new_stage = \"Staging\"\n",
     "client.transition_model_version_stage(\n",
     "    name=model_name,\n",
@@ -248,7 +240,7 @@
     {
      "data": {
       "text/plain": [
-       "<ModelVersion: creation_timestamp=1652971637398, current_stage='Staging', description='The model version 4 was transitioned to Staging on 2022-05-19', last_updated_timestamp=1652972142779, name='nyc-taxi-regressor', run_id='b8904012c84343b5bf8ee72aa8f0f402', run_link=None, source='./mlruns/1/b8904012c84343b5bf8ee72aa8f0f402/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=4>"
+       "<ModelVersion: aliases=[], creation_timestamp=1752490881412, current_stage='None', deployment_job_state=None, description='The model version 1 was transitioned to Staging on 2025-07-14', last_updated_timestamp=1752491114770, metrics=None, model_id=None, name='from_vscode_mnist', params=None, run_id='80db568af11b4f9aafb461a150608565', run_link=None, source='models:/m-13b91b67c0fd476f865617e8b32c091a', status='READY', status_message=None, tags={}, user_id=None, version=3>"
       ]
      },
      "execution_count": 33,
@@ -262,7 +254,7 @@
     "date = datetime.today().date()\n",
     "client.update_model_version(\n",
     "    name=model_name,\n",
-    "    version=model_version,\n",
+    "    version=3,\n",
     "    description=f\"The model version {model_version} was transitioned to {new_stage} on {date}\"\n",
     ")"
    ]
@@ -296,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,11 +320,7 @@
     "    train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
     "    return dv.transform(train_dicts)\n",
     "\n",
-    "\n",
-    "def test_model(name, stage, X_test, y_test):\n",
-    "    model = mlflow.pyfunc.load_model(f\"models:/{name}/{stage}\")\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    return {\"rmse\": mean_squared_error(y_test, y_pred, squared=False)}"
+    "\n"
    ]
   },
   {
@@ -412,60 +400,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 139 ms, sys: 44.6 ms, total: 183 ms\n",
-      "Wall time: 447 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'rmse': 6.659623830022514}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "%time test_model(name=model_name, stage=\"Production\", X_test=X_test, y_test=y_test)"
+    "# My code\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mlflow\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from tensorflow.keras.datasets import mnist\n",
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
+    "X_test = X_test.reshape(-1, 28*28) / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_model(name, stage, X_test, y_test):\n",
+    "    model = mlflow.pyfunc.load_model(f\"models:/{name}/{stage}\")\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    y_pred_classes = np.argmax(y_pred, axis=1)\n",
+    "    acc = accuracy_score(y_test, y_pred_classes)\n",
+    "    return {\"accuracy\": acc}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.94 s, sys: 216 ms, total: 7.16 s\n",
-      "Wall time: 7.28 s\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
+      "CPU times: total: 3.2 s\n",
+      "Wall time: 10.5 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rmse': 6.881555517147188}"
+       "{'accuracy': 0.9756}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,16 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_37660\\1703833061.py:1: FutureWarning: ``mlflow.tracking.client.MlflowClient.transition_model_version_stage`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  client.transition_model_version_stage(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<ModelVersion: creation_timestamp=1652971637398, current_stage='Production', description='The model version 4 was transitioned to Staging on 2022-05-19', last_updated_timestamp=1652972763255, name='nyc-taxi-regressor', run_id='b8904012c84343b5bf8ee72aa8f0f402', run_link=None, source='./mlruns/1/b8904012c84343b5bf8ee72aa8f0f402/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=4>"
+       "<ModelVersion: aliases=[], creation_timestamp=1752490808428, current_stage='Production', deployment_job_state=None, description=None, last_updated_timestamp=1752491533025, metrics=None, model_id=None, name='from_vscode_mnist', params=None, run_id='80db568af11b4f9aafb461a150608565', run_link=None, source='models:/m-13b91b67c0fd476f865617e8b32c091a', status='READY', status_message=None, tags={}, user_id=None, version=2>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +490,7 @@
    "source": [
     "client.transition_model_version_stage(\n",
     "    name=model_name,\n",
-    "    version=4,\n",
+    "    version=2,\n",
     "    stage=\"Production\",\n",
     "    archive_existing_versions=True\n",
     ")"
@@ -501,10 +498,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
+      "CPU times: total: 984 ms\n",
+      "Wall time: 803 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.9756}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time test_model(name=model_name, stage=\"Production\", X_test=X_test, y_test=y_test)"
+   ]
   },
   {
    "cell_type": "code",
@@ -515,11 +534,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0848c9d6c7d415ad6c477ff7ff8e98694d1a4aa96d0deee89244642e6b630036"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('exp-tracking-env')",
+   "display_name": "MLOPS-VENV",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4
  },
